--- a/static/css/detect.css
+++ b/static/css/detect.css
@@ -1,34 +1,3 @@
-* {
-
-    margin: 0;
-    padding: 0;
-    background: #061A1F;
-
-
-}
-
-body {
-    margin: 0px;
-    padding: 0px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    width: 100vw;
-    padding-top: 55px;
-    padding-bottom: 55px;
-    /* height: 100vh; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* padding-top: 22px; */
-    background: #061A1F;
-    align-self: center;
-    justify-self: center;
-    overflow-x: hidden;
-}
-
-
-
-
 div .info {
 
     color: aliceblue;
@@ -73,7 +42,7 @@ div .info input {
     left: 25px;
 } */
 
-.container {
+.container-photo {
     width: 60%;
     min-width: 450px;
     margin-top: 11px;
