--- a/templates/detect.html
+++ b/templates/detect.html
@@ -1,64 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Detect</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+        <!-- SEO Meta Tags -->
+        <meta name="description" content="Pavo is a mobile app Tailwind CSS HTML template created to help you present benefits, features and information about mobile apps in order to convince visitors to download them" />
+        <meta name="author" content="Your name" />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
+        <meta property="og:site_name" content="" /> <!-- website name -->
+        <meta property="og:site" content="" /> <!-- website link -->
+        <meta property="og:title" content="" /> <!-- title shown in the actual shared post -->
+        <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+        <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+        <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+        <meta name="twitter:card" content="summary_large_image" /> <!-- to have large image post format in Twitter -->
+
+        <!-- Webpage Title -->
+        <title>Pavo Webpage Title</title>
+
+        <!-- Styles -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet" />
+        <link href="/static/css/fontawesome-all.css" rel="stylesheet" />
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+        <link href="/static/css/swiper.css" rel="stylesheet" />
+        <link href="/static/css/magnific-popup.css" rel="stylesheet" />
+        <link href="/static/css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="/static/css/detect.css">
+        <!-- Favicon  -->
+        <link rel="icon" href="/static/images/favicon.png" />
+    </head>
+    <body data-spy="scroll" data-target=".fixed-top">
+
+        <!-- Navigation -->
+        <nav class="navbar fixed-top">
+            <div class="container sm:px-4 lg:px-8 flex flex-wrap items-center justify-between lg:flex-nowrap">
+                
+                <!-- Text Logo - Use this if you don't have a graphic logo -->
+                <!-- <a class="text-gray-800 font-semibold text-3xl leading-4 no-underline page-scroll" href="index.html">Pavo</a> -->
+
+                <!-- Image Logo -->
+                <a class="inline-block mr-4 py-0.5 text-xl whitespace-nowrap hover:no-underline focus:no-underline" href="index.html">
+                    <img src="/static/images/logo.svg" alt="alternative" class="h-8" />
+                </a>
+
+                <button class="background-transparent rounded text-xl leading-none hover:no-underline focus:no-underline lg:hidden lg:text-gray-400" type="button" data-toggle="offcanvas">
+                    <span class="navbar-toggler-icon inline-block w-8 h-8 align-middle"></span>
+                </button>
+
+                <div class="navbar-collapse offcanvas-collapse lg:flex lg:flex-grow lg:items-center" id="navbarsExampleDefault">
+                    <ul class="pl-0 mt-3 mb-2 ml-auto flex flex-col list-none lg:mt-0 lg:mb-0 lg:flex-row">
+                        <li>
+                            <a class="nav-link page-scroll" href="index.html#header">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li>
+                            <a class="nav-link page-scroll" href="index.html#features">Offres</a>
+                        </li>
+                        <li>
+                            <a class="nav-link page-scroll" href="index.html#details">Conseils</a>
+                        </li>
+                        <li>
+                            <a class="nav-link page-scroll" href="index.html#pricing">Espace PRO</a>
+                        </li>
+                        <li class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nous</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item page-scroll" href="article.html">BLOG</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a>
+                            </div>
+                        </li>
+                        <li>
+                            <a class="nav-link page-scroll" href="#download">Download</a>
+                        </li>
+                    </ul>
+                    <span class="block lg:ml-3.5">
+                        <a class="no-underline" href="#your-link">
+                            <i class="fab fa-apple text-indigo-600 hover:text-pink-500 text-xl transition-all duration-200 mr-1.5"></i>
+                        </a>
+                        <a class="no-underline" href="#your-link">
+                            <i class="fab fa-android text-indigo-600 hover:text-pink-500 text-xl transition-all duration-200"></i>
+                        </a>
+                    </span>
+                </div> <!-- end of navbar-collapse -->
+            </div> <!-- end of container -->
+        </nav> <!-- end of navbar -->
+        <!-- end of navigation -->
+
+        <!-- Header -->
+        <header id="header" class="header py-28 text-center md:pt-36 lg:text-left xl:pt-44 xl:pb-32">
+            <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
+              <div class="center">
+                <div class="container-photo">
+            
+                  <figure class="image-container">
+                    <img id="chosen-image" src="">
+            
+                  </figure>
+                  <form id="uploadForm" enctype="multipart/form-data">
+                    <input type="file" name="file" id="upload" accept="image/*">
+                    <label for="upload"> choisir une Photo</label>
+                    
+                  </form>
+                </div>
+            
+                <div id="loading-spinner" class="spinner">
+                  <i class="fas fa-spinner fa-spin"></i>
+                  <p>detecting ...</p>
+                </div>
+            
+                <!-- Add a container for the result -->
+                <div id="result-container"></div>
+            
+                <!-- Add a container for the error message -->
+                <div id="error-container"></div>
+              </div>
+              <button id="results" onclick="detectFunction()"> Analyser
+                <span class="material-symbols-outlined">
+                  
+                </span></button>
+            
+            
+              <div>
+                <h4 class="mb-8 lg:max-w-3xl lg:mx-auto">
+                <p>{{ json_response }}</p>
+                </h4>
+              </div>
+            
+            
+            
+              <script src="/static/js/detect.js"></script>
+            </div> <!-- end of container -->
+        </header> <!-- end of header -->
+        <!-- end of header -->
+
+        <!-- Footer -->
+        <div class="footer">
+            <div class="container px-4 sm:px-8">
+              <h4 class="mb-8 lg:max-w-3xl lg:mx-auto">Skin Lens is a mobile application for Skin imperfection diagnosis and you can reach the team at <a class="text-indigo-600 hover:text-gray-500" href="mailto:support@clipeus.info">support@clipeus.info</a></h4>
+              <div class="social-container">
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-pinterest-p fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-instagram fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-youtube fa-stack-1x"></i>
+                        </a>
+                    </span>
+                </div> <!-- end of social-container -->
+            </div> <!-- end of container -->
+        </div> <!-- end of footer -->
+        <!-- end of footer -->
 
 
-  <!-- <link rel="stylesheet" href="info.css"> -->
-  <link rel="stylesheet" href="/static/css/detect.css">
-  <link rel="stylesheet" href="/static/css/styles.css">
-</head>
+        <!-- Copyright -->
+        <div class="copyright">
+            <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-3">
+                <ul class="mb-4 list-unstyled p-small">
+                    <li class="mb-2"><a href="article.html">Article Details</a></li>
+                    <li class="mb-2"><a href="terms.html">Terms & Conditions</a></li>
+                    <li class="mb-2"><a href="privacy.html">Privacy Policy</a></li>
+                </ul>
+                <p class="pb-2 p-small statement">Copyright © <a href="#your-link" class="no-underline">Your name</a></p>
 
-<body>
-  <div class="center">
-    <a href="/">
-      <img src="/static/images/logo.png" class="img">
-    </a>
-    <div class="container">
+                <p class="pb-2 p-small statement">Distributed by :<a href="https://themewagon.com/" class="no-underline">Themewagon</a></p>
+            </div> 
 
-      <figure class="image-container">
-        <img id="chosen-image" src="">
-
-      </figure>
-      <form id="uploadForm" enctype="multipart/form-data">
-        <input type="file" name="file" id="upload" accept="image/*">
-        <label for="upload"> choose a Photo</label>
-      </form>
-    </div>
-
-    <div id="loading-spinner" class="spinner">
-      <i class="fas fa-spinner fa-spin"></i>
-      <p>detecting ...</p>
-    </div>
-
-    <!-- Add a container for the result -->
-    <div id="result-container"></div>
-
-    <!-- Add a container for the error message -->
-    <div id="error-container"></div>
-  </div>
-  <button id="results" onclick="detectFunction()" class="resultButton"> see result
-    <span class="material-symbols-outlined">
-      chevron_right
-    </span></button>
+        <!-- end of container -->
+        </div> <!-- end of copyright -->
+        <!-- end of copyright -->
 
 
-  <div>
-    <p>{{ json_response }}</p>
-  </div>
-
-
-
-  <script src="/static/js/detect.js"></script>
-</body>
-
+        <!-- Scripts -->
+        <script src="/static/js/jquery.min.js"></script> <!-- jQuery for JavaScript plugins -->
+        <script src="/static/js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+        <script src="/static/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+        <script src="/static/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+        <script src="/static/js/scriptsCss.js"></script> <!-- Custom scripts -->
+    </body>
 </html>
